# depth_cluster_remove_qt

./: CMakeLists.txt
demo/: CMakeLists.txt  show_objects_kitti.cpp  show_objects_moosmann.cpp  show_objects_png.cpp
src/: CMakeLists.txt
src/clusterers/: image_based_clusterer.h
src/communication/: abstract_sender.h
src/ground_removal/: depth_ground_remover.cpp  depth_ground_remover.h
src/projections/: cloud_projection.cpp  cloud_projection.h  projection_params.cpp  projection_params.h  ring_projection.cpp  ring_projection.h  spherical_projection.cpp
src/utils/: cloud.cpp  cloud.h  folder_reader.cpp  mem_utils.h  pose.h  rich_point.cpp  timer.h  useful_typedefs.h  velodyne_utils.cpp  velodyne_utils.h
